Bug 586961. Direct accesskey clicks on label to correct controlled element. r=neil a=betaN